--- a/cartos-interface/src/locales/pt.json
+++ b/cartos-interface/src/locales/pt.json
@@ -59,8 +59,10 @@
         "diss": "Dissertações",
         "reltec": "Relatório Técnico",
         "siweb": "Sítios Web",
-        "importAjuda": "Como importar um documento",
-        "textoImportAjuda": "Texto de Ajuda",
+        "insertAjuda": "Como Inserir um elemento",
+        "insertAjudaTxt": "Preencha todos campos necessários e depois clique no botão Guardar",
+        "importAjuda": "Como importar elementos",
+        "textoImportAjuda": "Selecione um ficheiro CSV e depois clique no botão submeter ",
         "textoLoginAjuda": "Texto de Ajuda",
         "confirm":"Sim",
         "nao":"Não",
