--- a/cartos-interface/src/locales/en.json
+++ b/cartos-interface/src/locales/en.json
@@ -45,7 +45,8 @@
         "reltec": "Technical Report",
         "siweb": "Websites",
         "importAjuda": "How to import elements",
-        "textoImportAjuda": "Select a CSV file and then click the submit button",
+        "textoImportAjuda": "Select a CSV file and then click the submit button ",
+        "textoImportAjuda2": "Ejemplo de formato de archivo:",
         "terms": "Terms of Using",
         "priv": "Restrictions",
         "tituloProjeto": "Hosting and Exploring System of Comic Books",
@@ -53,11 +54,13 @@
         "se":"Search",
         "textoLoginAjuda": "Help Text",
         "insertAjuda": "How to insert an element",
-        "insertAjudaTxt": "Fill all necessary fields and then click on the Save button"
+        "insertAjudaTxt": "Fill all necessary fields and then click on the Save button",
+        "editSucess": "Element has been successfully edited!",
+        "editHelp": "Altere os campos que acha necessário e depois clique no botão Guardar"
     },
     "nav": {
         "instrucoesPesquisa": "Search instructions",
-        "textoInstrucoes": "The parameterization of the research process is shown in the help option",
+        "textoInstrucoes": "Search for the element by typing in the search box and/or through the filters",
         "continuarPesquisa": "Continue",
         "barraPesquisa": "Search",
         "buttonPesquisa": "Search",
@@ -88,10 +91,10 @@
         "occur1": "occurrence",
         "fechar": "Exit",
         "occur2": "Occurrences",
-        "textoCreditos": "Credits text",
-        "textoSaberMais": "Know more text",
-        "textoTermos": "Terms text",
-        "textoPriv": "Privacy text",
+        "textoCreditos": "\n Team \n ",
+        "textoSaberMais": "\n Cartos is a Web platform for collection and exploration of a collection of unmade band books.",
+        "textoTermos": "\n Copyrighted - Cards™ ",
+        "textoPriv": "\n We respect your right to privacy and your choices regarding your data. We need to process some of your personal data while using our tools but we are committed to taking a responsible and values-driven approach.",
         "buttonAjuda": "Help",
         "elementoAnaliseHeadline": "Hosting and Exploring System of Comic Books",
         "tituloProjeto": "Hosting and Exploring System of Comic Books",
@@ -157,6 +160,7 @@
         "reg": "Request access credentials",
         "rec": "Recover password",
         "adminSystem": "Administration System",
+        "leitorSystem":"Sistema de Lectura",
         "reqacesso":"Request access credentials",
         "enter":"Enter",
         "pCred":"Credentials retrieval request sent to the system.",
