--- a/cartos-interface/src/locales/es.json
+++ b/cartos-interface/src/locales/es.json
@@ -45,7 +45,8 @@
         "reltec": "Relato técnico",
         "siweb": "Sitios Web",
         "importAjuda": "Cómo importar elementos",
-        "textoImportAjuda": "Seleccione un archivo CSV y clic en el botón enviar",
+        "textoImportAjuda": "Seleccione un archivo CSV y clic en el botón enviar ",
+        "textoImportAjuda2": "Example file format:",
         "terms": "Condiciones",
         "priv": "Restricciones",
         "tituloProjeto": "Sistema de Recepción y Exploración de Cómics",
@@ -53,11 +54,14 @@
         "se":"Buscar",
         "textoLoginAjuda": "Texto de Ayuda",
         "insertAjuda": "Cómo insertar un elemento",
-        "insertAjudaTxt": "Complete todos los campos necesarios y luego haga clic en el botón Guardar"
+        "insertAjudaTxt": "Complete todos los campos necesarios y luego haga clic en el botón Guardar",
+        "editSucess": "Elemento se ha editado correctamente!",
+        "editHelp": "Altere os campos que acha necessário e depois clique no botão Guardar"
+
     },
     "nav": {
         "instrucoesPesquisa": "Instrucciones de búsqueda",
-        "textoInstrucoes": "La parametrización del proceso de investigación se muestra en la opción de ayuda",
+        "textoInstrucoes": "Busque el elemento escribiendo en el cuadro de búsqueda y/o mediante los filtros",
         "continuarPesquisa": "Seguir",
         "barraPesquisa": "Buscar",
         "buttonPesquisa": "Buscar",
@@ -88,10 +92,10 @@
         "occur1": "ocorrencia",
         "fechar": "Salir",
         "occur2": "ocorrencias",
-        "textoCreditos": "Creditos texto",
-        "textoSaberMais": "Texto de saber mais",
-        "textoTermos": "Texto termos",
-        "textoPriv": "Texto privacidade",
+        "textoCreditos": "\n Equipo",
+        "textoSaberMais": "\n Cartos es una plataforma web para alojar y explorar una colección de cómics.",
+        "textoTermos": "\n Derechos de autor: Cartos ™ ",
+        "textoPriv": "\n Respetamos su derecho a la privacidad y sus elecciones con respecto a sus datos. Necesitamos procesar algunos de sus datos personales mientras usamos nuestras herramientas, pero estamos comprometidos a adoptar un enfoque responsable y basado en valores.",
         "buttonAjuda": "Ayuda",
         "elementoAnaliseHeadline": "Sistema de Recepción y Exploración de Cómics",
         "tituloProjeto": "Sistema de Recepción y Exploración de Cómics",
@@ -156,6 +160,7 @@
         "reg": "Solicitud de credenciales de acceso",
         "rec": "Recuperar contraseña",
         "adminSystem": "Sistema de Administracion",
+        "leitorSystem":"Reading System",
         "reqacesso":"Solicitar credenciales de acceso",
         "enter":"Entrar",
         "pCred":"Solicitud de recuperación de credenciales enviada al sistema.",
