--- a/cartos-interface/src/locales/pt.json
+++ b/cartos-interface/src/locales/pt.json
@@ -63,6 +63,7 @@
         "insertAjudaTxt": "Preencha todos campos necessários e depois clique no botão Guardar",
         "importAjuda": "Como importar elementos",
         "textoImportAjuda": "Selecione um ficheiro CSV e depois clique no botão submeter ",
+        "textoImportAjuda2": "Exemplo formatação do ficheiro:",
         "textoLoginAjuda": "Texto de Ajuda",
         "confirm":"Sim",
         "nao":"Não",
@@ -71,11 +72,13 @@
         "exit":"Sair da aplicação",
         "leave":"Sair",
         "se":"Procura",
-        "tituloProjeto" : "Sistema de Acolhimento e Exploração de Livros de Banda Desenhada"
+        "tituloProjeto" : "Sistema de Acolhimento e Exploração de Livros de Banda Desenhada",
+        "editSucess": "Elemento foi editado com sucesso!",
+        "editHelp": "Altere os campos que acha necessário e depois clique no botão Guardar"
     },
     "nav": { 
         "instrucoesPesquisa" : "Instruções de pesquisa", 
-        "textoInstrucoes" : "\n O motor de pesquisa engloba as seguintes funcionalidades: \n + para incluir o termo na pesquisa; \n - para retirar o termo da pesquisa; \n \"\" para pesquisar o termo exato entre as aspas.\n Estes operadores podem ser aplicados a todos os tipos de pesquisa excepto numa pesquisa por número de palavras.", 
+        "textoInstrucoes" : "\n Procure o elemento digitando na caixa de pesquisa e/ou através dos filtros", 
         "continuarPesquisa" : "Continuar", 
         "barraPesquisa" : "Pesquisa", 
         "buttonPesquisa" : "Pesquisa", 
@@ -106,10 +109,10 @@
         "occur1" : "ocorrência", 
         "fechar" : "Fechar", 
         "occur2" : "ocorrências",
-        "textoCreditos" : "\n Creditos texto", 
-        "textoSaberMais" : "\n Texto de saber mais", 
-        "textoTermos" : "\n Texto termos", 
-        "textoPriv" : "\n Texto privacidade",
+        "textoCreditos" : "\n Equipa", 
+        "textoSaberMais" : "\n Cartos é uma plataforma Web para acolhimento e exploração de uma coleção de livros de banda desenhada.", 
+        "textoTermos" : "\n Com direitos de autor - Cartos™ ", 
+        "textoPriv" : "\n Respeitamos o teu direito à privacidade e as tuas escolhas relativamente aos teus dados. Necessitamos de processar alguns dos teus dados pessoais enquanto utilizas as nossas ferramentas mas comprometemo-nos a assumir uma abordagem responsável e guiada pelos valores",
         "buttonAjuda" : "Ajuda", 
         "elementoAnaliseHeadline" : "Sistema de Acolhimento e Exploração de Livros de Banda Desenhada",
         "tituloProjeto" : "Sistema de Acolhimento e Exploração de Livros de Banda Desenhada",
@@ -189,6 +192,7 @@
         "reg": "Pedido de credenciais de acesso",
         "rec": "Recuperar palavra-passe",
         "adminSystem":"Sistema de Administração",
+        "leitorSystem":"Sistema de Leitura",
         "reqacesso":"Requisitar credenciais de acesso",
         "enter":"Entrar",
         "pCred":"Pedido de recuperação de credenciais enviado ao sistema.",
